<?xml version="1.0"?>
<package>
  <name>ipc_msgs</name>
  <version>0.0.0</version>
  <description>icp msg package</description>
  <maintainer email="tomoya.sato@pf.is.s.u-tokyo.ac.jp">Tomoya-Sato</maintainer>
  <license>none</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
